fix:appointment list ui alignment

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   background-color: #fff;
   padding: 25px;
   border-radius: 10px;
-  max-height: 90vh;
+  max-height: 110vh;
   overflow-y: auto;
 }
 
@@ -56,17 +56,21 @@ body {
   margin-top: 1rem;
   background-color: #fff;
   border-radius: 8px;
-  overflow: hidden;
+  overflow-y: auto;
+  max-height: 80vh;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 }
 
 .appointment-table thead {
   background-color: #f0f0f0;
 }
+.table-container {
+  max-height: 100px;
+}
 
 .appointment-table th,
 .appointment-table td {
-  padding: 12px 16px;
+  padding: 6px 10px;
   text-align: left;
   border-bottom: 1px solid #e0e0e0;
 }
@@ -233,6 +237,8 @@ form select:focus {
   box-sizing: border-box;
   flex-direction: row;
   justify-content: space-between;
+  max-height: 80vh;
+  overflow-y: auto;
 }
 
 #appointment-cards.full-width-view .appointment-card {
@@ -493,8 +499,12 @@ form select:focus {
   }
 
   .head-area {
-    padding: 10px;
     font-size: 14px;
+    padding: 0;
+  }
+
+  #total-appointments{
+    margin-left: 25px;
   }
 
   form label.form-label {
